Uploaded image for project: 'MariaDB Server'
  1. MariaDB Server
  2. MDEV-27860

Spider: SIGSEGV in spider_parse_connect_info on CREATE TABLE

    XMLWordPrintable

Details

    Description

      Very prominent in all runs. Present in opt+dbg.

      INSTALL PLUGIN spider SONAME 'ha_spider.so';
      CREATE TABLE t ENGINE=SPIDER COMMENT="TABLE 't2'" PARTITION BY LIST COLUMNS (c) (PARTITION p DEFAULT COMMENT="srv 'a'" ENGINE=SPIDER);
      

      Leads to:

      10.9.0 b5852ffbeebc3000982988383daeefb0549e058a (Optimized)

      Core was generated by `/test/MD140222-mariadb-10.9.0-linux-x86_64-opt/bin/mysqld --no-defaults --core-'.
      Program terminated with signal SIGSEGV, Segmentation fault.
      #0  0x000014a23c0bbb26 in spider_parse_connect_info (share=0x14a1680255d8, 
          table_share=table_share@entry=0x14a23c198fc0, 
          part_info=part_info@entry=0x14a1680114f0, 
          create_table=create_table@entry=0)
          at /test/10.9_opt/storage/spider/spd_table.cc:2336
      [Current thread is 1 (Thread 0x14a23c19b700 (LWP 3606455))]
      (gdb) bt
      #0  0x000014a23c0bbb26 in spider_parse_connect_info (share=0x14a1680255d8, table_share=table_share@entry=0x14a23c198fc0, part_info=part_info@entry=0x14a1680114f0, create_table=create_table@entry=0) at /test/10.9_opt/storage/spider/spd_table.cc:2336
      #1  0x000014a23c0bc7ed in spider_create_share (table_name=<optimized out>, table_share=0x14a23c198fc0, part_info=0x14a1680114f0, hash_value=1942185790, error_num=0x14a23c19892c) at /test/10.9_opt/storage/spider/spd_table.cc:4450
      #2  0x000014a23c0c03a6 in spider_discover_table_structure (hton=0x14a1680341f8, thd=0x14a168000c58, share=0x14a23c198fc0, info=0x14a23c199c90) at /test/10.9_opt/storage/spider/spd_table.cc:8736
      #3  0x0000561f41b709df in create_table_impl (thd=thd@entry=0x14a168000c58, ddl_log_state_create=ddl_log_state_create@entry=0x14a23c199a40, ddl_log_state_rm=<optimized out>, orig_db=@0x14a168010aa0: {str = 0x14a168011168 "test", length = 4}, orig_table_name=@0x14a168010ab0: {str = 0x14a168010a50 "t", length = 1}, db=@0x14a168010aa0: {str = 0x14a168011168 "test", length = 4}, table_name=@0x14a168010ab0: {str = 0x14a168010a50 "t", length = 1}, path=@0x14a23c199780: {str = 0x14a23c1997a0 "./test/t", length = 8}, options=<optimized out>, create_info=0x14a23c199c90, alter_info=0x14a23c199ba0, create_table_mode=-3, is_trans=0x14a23c199a3f, key_info=0x14a23c199778, key_count=0x14a23c199774, frm=0x14a23c199790) at /test/10.9_opt/sql/sql_table.cc:4561
      #4  0x0000561f41b70f58 in mysql_create_table_no_lock (thd=thd@entry=0x14a168000c58, ddl_log_state_create=ddl_log_state_create@entry=0x14a23c199a40, ddl_log_state_rm=ddl_log_state_rm@entry=0x14a23c199a60, db=db@entry=0x14a168010aa0, table_name=table_name@entry=0x14a168010ab0, create_info=create_info@entry=0x14a23c199c90, alter_info=0x14a23c199ba0, is_trans=0x14a23c199a3f, create_table_mode=-3, table_list=0x14a168010a88) at /test/10.9_opt/sql/sql_table.cc:4710
      #5  0x0000561f41b71344 in mysql_create_table (thd=thd@entry=0x14a168000c58, create_table=create_table@entry=0x14a168010a88, create_info=create_info@entry=0x14a23c199c90, alter_info=alter_info@entry=0x14a23c199ba0) at /test/10.9_opt/sql/sql_table.cc:4822
      #6  0x0000561f41b72be9 in Sql_cmd_create_table_like::execute (this=<optimized out>, thd=0x14a168000c58) at /test/10.9_opt/sql/sql_table.cc:12323
      #7  0x0000561f41abe1b6 in mysql_execute_command (thd=0x14a168000c58, is_called_from_prepared_stmt=<optimized out>) at /test/10.9_opt/sql/sql_parse.cc:5988
      #8  0x0000561f41aae086 in mysql_parse (thd=0x14a168000c58, rawbuf=<optimized out>, length=<optimized out>, parser_state=<optimized out>) at /test/10.9_opt/sql/sql_parse.cc:8027
      #9  0x0000561f41aba235 in dispatch_command (command=COM_QUERY, thd=0x14a168000c58, packet=<optimized out>, packet_length=<optimized out>, blocking=<optimized out>) at /test/10.9_opt/sql/sql_class.h:1362
      #10 0x0000561f41abc427 in do_command (thd=0x14a168000c58, blocking=blocking@entry=true) at /test/10.9_opt/sql/sql_parse.cc:1402
      #11 0x0000561f41bdbd77 in do_handle_one_connection (connect=<optimized out>, put_in_cache=true) at /test/10.9_opt/sql/sql_connect.cc:1418
      #12 0x0000561f41bdc0bd in handle_one_connection (arg=arg@entry=0x561f44c9f498) at /test/10.9_opt/sql/sql_connect.cc:1312
      #13 0x0000561f41f557b1 in pfs_spawn_thread (arg=0x561f44c1eb88) at /test/10.9_opt/storage/perfschema/pfs.cc:2201
      #14 0x000014a25ef5e609 in start_thread (arg=<optimized out>) at pthread_create.c:477
      #15 0x000014a25eb4c293 in clone () at ../sysdeps/unix/sysv/linux/x86_64/clone.S:95
      

      10.9.0 b5852ffbeebc3000982988383daeefb0549e058a (Debug)

      Core was generated by `/test/MD140222-mariadb-10.9.0-linux-x86_64-dbg/bin/mysqld --no-defaults --core-'.
      Program terminated with signal SIGSEGV, Segmentation fault.
      #0  0x00001486740ee63b in spider_parse_connect_info (share=0x1485d805dd78, 
          table_share=table_share@entry=0x14868812bec0, 
          part_info=part_info@entry=0x1485d8014a10, 
          create_table=create_table@entry=0)
          at /test/10.9_dbg/storage/spider/spd_table.cc:2336
      [Current thread is 1 (Thread 0x14868812e700 (LWP 3606662))]
      (gdb) bt
      #0  0x00001486740ee63b in spider_parse_connect_info (share=0x1485d805dd78, table_share=table_share@entry=0x14868812bec0, part_info=part_info@entry=0x1485d8014a10, create_table=create_table@entry=0) at /test/10.9_dbg/storage/spider/spd_table.cc:2336
      #1  0x00001486740f95e7 in spider_create_share (table_name=<optimized out>, table_name@entry=0x14868812b880 "./test/t#P#p", table_share=table_share@entry=0x14868812bec0, part_info=part_info@entry=0x1485d8014a10, hash_value=hash_value@entry=1942185790, error_num=error_num@entry=0x14868812b7d0) at /test/10.9_dbg/storage/spider/spd_table.cc:4450
      #2  0x00001486740ff1bc in spider_discover_table_structure (hton=0x1485d8033878, thd=0x1485d8000db8, share=0x14868812bec0, info=0x14868812cbc0) at /test/10.9_dbg/storage/spider/spd_table.cc:8736
      #3  0x00005560b7dd5efe in create_table_impl (thd=thd@entry=0x1485d8000db8, ddl_log_state_create=ddl_log_state_create@entry=0x14868812c920, ddl_log_state_rm=<optimized out>, ddl_log_state_rm@entry=0x14868812c940, orig_db=@0x1485d8013fc0: {str = 0x1485d8014688 "test", length = 4}, orig_table_name=@0x1485d8013fd0: {str = 0x1485d8013f70 "t", length = 1}, db=@0x1485d8013fc0: {str = 0x1485d8014688 "test", length = 4}, table_name=@0x1485d8013fd0: {str = 0x1485d8013f70 "t", length = 1}, path=@0x14868812c670: {str = 0x14868812c690 "./test/t", length = 8}, options=<optimized out>, create_info=0x14868812cbc0, alter_info=0x14868812cad0, create_table_mode=-3, is_trans=0x14868812c91f, key_info=0x14868812c668, key_count=0x14868812c664, frm=0x14868812c680) at /test/10.9_dbg/sql/sql_table.cc:4561
      #4  0x00005560b7dd672b in mysql_create_table_no_lock (thd=thd@entry=0x1485d8000db8, ddl_log_state_create=ddl_log_state_create@entry=0x14868812c920, ddl_log_state_rm=ddl_log_state_rm@entry=0x14868812c940, db=db@entry=0x1485d8013fc0, table_name=table_name@entry=0x1485d8013fd0, create_info=create_info@entry=0x14868812cbc0, alter_info=0x14868812cad0, is_trans=0x14868812c91f, create_table_mode=-3, table_list=0x1485d8013fa8) at /test/10.9_dbg/sql/sql_table.cc:4710
      #5  0x00005560b7dd6b4e in mysql_create_table (thd=thd@entry=0x1485d8000db8, create_table=create_table@entry=0x1485d8013fa8, create_info=create_info@entry=0x14868812cbc0, alter_info=alter_info@entry=0x14868812cad0) at /test/10.9_dbg/sql/sql_table.cc:4822
      #6  0x00005560b7dd8a06 in Sql_cmd_create_table_like::execute (this=<optimized out>, thd=0x1485d8000db8) at /test/10.9_dbg/sql/sql_table.cc:12323
      #7  0x00005560b7cf180e in mysql_execute_command (thd=thd@entry=0x1485d8000db8, is_called_from_prepared_stmt=is_called_from_prepared_stmt@entry=false) at /test/10.9_dbg/sql/sql_parse.cc:5988
      #8  0x00005560b7cd8315 in mysql_parse (thd=thd@entry=0x1485d8000db8, rawbuf=<optimized out>, length=<optimized out>, parser_state=parser_state@entry=0x14868812d400) at /test/10.9_dbg/sql/sql_parse.cc:8027
      #9  0x00005560b7ce6fb1 in dispatch_command (command=command@entry=COM_QUERY, thd=thd@entry=0x1485d8000db8, packet=packet@entry=0x1485d800b889 "CREATE TABLE t ENGINE=SPIDER COMMENT=\"TABLE 't2'\" PARTITION BY LIST COLUMNS (c) (PARTITION p DEFAULT COMMENT=\"srv 'a'\" ENGINE=SPIDER)", packet_length=packet_length@entry=133, blocking=blocking@entry=true) at /test/10.9_dbg/sql/sql_class.h:1362
      #10 0x00005560b7cea3f8 in do_command (thd=0x1485d8000db8, blocking=blocking@entry=true) at /test/10.9_dbg/sql/sql_parse.cc:1402
      #11 0x00005560b7e64fc4 in do_handle_one_connection (connect=<optimized out>, connect@entry=0x5560ba8b3448, put_in_cache=put_in_cache@entry=true) at /test/10.9_dbg/sql/sql_connect.cc:1418
      #12 0x00005560b7e655c9 in handle_one_connection (arg=arg@entry=0x5560ba8b3448) at /test/10.9_dbg/sql/sql_connect.cc:1312
      #13 0x00005560b82ebd67 in pfs_spawn_thread (arg=0x5560ba7c6d88) at /test/10.9_dbg/storage/perfschema/pfs.cc:2201
      #14 0x0000148692ea1609 in start_thread (arg=<optimized out>) at pthread_create.c:477
      #15 0x0000148692a8f293 in clone () at ../sysdeps/unix/sysv/linux/x86_64/clone.S:95
      

      10.8.1 0c5d1342ae6b5ab3256848be7a83e5c3b1f21566 (Optimized)

      Core was generated by `/test/MD290122-mariadb-10.8.1-linux-x86_64-opt/bin/mysqld --no-defaults --core-'.
      Program terminated with signal SIGSEGV, Segmentation fault.
      #0  0x000014d0c00d4ba6 in spider_parse_connect_info (share=0x14cff4025598, 
          table_share=table_share@entry=0x14d0c01b1fc0, 
          part_info=part_info@entry=0x14cff40114f0, 
          create_table=create_table@entry=0)
          at /test/10.8_opt/storage/spider/spd_table.cc:2396
      [Current thread is 1 (Thread 0x14d0c01b4700 (LWP 3606416))]
      (gdb) bt
      #0  0x000014d0c00d4ba6 in spider_parse_connect_info (share=0x14cff4025598, table_share=table_share@entry=0x14d0c01b1fc0, part_info=part_info@entry=0x14cff40114f0, create_table=create_table@entry=0) at /test/10.8_opt/storage/spider/spd_table.cc:2396
      #1  0x000014d0c00d586d in spider_create_share (table_name=<optimized out>, table_share=0x14d0c01b1fc0, part_info=0x14cff40114f0, hash_value=1942185790, error_num=0x14d0c01b192c) at /test/10.8_opt/storage/spider/spd_table.cc:4566
      #2  0x000014d0c00d9426 in spider_discover_table_structure (hton=0x14cff40341f8, thd=0x14cff4000c58, share=0x14d0c01b1fc0, info=0x14d0c01b2c90) at /test/10.8_opt/storage/spider/spd_table.cc:9190
      #3  0x000055a3680c603f in create_table_impl (thd=thd@entry=0x14cff4000c58, ddl_log_state_create=ddl_log_state_create@entry=0x14d0c01b2a40, ddl_log_state_rm=<optimized out>, orig_db=@0x14cff4010aa0: {str = 0x14cff4011168 "test", length = 4}, orig_table_name=@0x14cff4010ab0: {str = 0x14cff4010a50 "t", length = 1}, db=@0x14cff4010aa0: {str = 0x14cff4011168 "test", length = 4}, table_name=@0x14cff4010ab0: {str = 0x14cff4010a50 "t", length = 1}, path=@0x14d0c01b2780: {str = 0x14d0c01b27a0 "./test/t", length = 8}, options=<optimized out>, create_info=0x14d0c01b2c90, alter_info=0x14d0c01b2ba0, create_table_mode=-3, is_trans=0x14d0c01b2a3f, key_info=0x14d0c01b2778, key_count=0x14d0c01b2774, frm=0x14d0c01b2790) at /test/10.8_opt/sql/sql_table.cc:4561
      #4  0x000055a3680c65b8 in mysql_create_table_no_lock (thd=thd@entry=0x14cff4000c58, ddl_log_state_create=ddl_log_state_create@entry=0x14d0c01b2a40, ddl_log_state_rm=ddl_log_state_rm@entry=0x14d0c01b2a60, db=db@entry=0x14cff4010aa0, table_name=table_name@entry=0x14cff4010ab0, create_info=create_info@entry=0x14d0c01b2c90, alter_info=0x14d0c01b2ba0, is_trans=0x14d0c01b2a3f, create_table_mode=-3, table_list=0x14cff4010a88) at /test/10.8_opt/sql/sql_table.cc:4710
      #5  0x000055a3680c69a4 in mysql_create_table (thd=thd@entry=0x14cff4000c58, create_table=create_table@entry=0x14cff4010a88, create_info=create_info@entry=0x14d0c01b2c90, alter_info=alter_info@entry=0x14d0c01b2ba0) at /test/10.8_opt/sql/sql_table.cc:4822
      #6  0x000055a3680c8239 in Sql_cmd_create_table_like::execute (this=<optimized out>, thd=0x14cff4000c58) at /test/10.8_opt/sql/sql_table.cc:12297
      #7  0x000055a368013826 in mysql_execute_command (thd=0x14cff4000c58, is_called_from_prepared_stmt=<optimized out>) at /test/10.8_opt/sql/sql_parse.cc:5988
      #8  0x000055a3680036f6 in mysql_parse (thd=0x14cff4000c58, rawbuf=<optimized out>, length=<optimized out>, parser_state=<optimized out>) at /test/10.8_opt/sql/sql_parse.cc:8027
      #9  0x000055a36800f8a5 in dispatch_command (command=COM_QUERY, thd=0x14cff4000c58, packet=<optimized out>, packet_length=<optimized out>, blocking=<optimized out>) at /test/10.8_opt/sql/sql_class.h:1362
      #10 0x000055a368011a97 in do_command (thd=0x14cff4000c58, blocking=blocking@entry=true) at /test/10.8_opt/sql/sql_parse.cc:1402
      #11 0x000055a368131247 in do_handle_one_connection (connect=<optimized out>, put_in_cache=true) at /test/10.8_opt/sql/sql_connect.cc:1418
      #12 0x000055a36813158d in handle_one_connection (arg=arg@entry=0x55a36b4f72a8) at /test/10.8_opt/sql/sql_connect.cc:1312
      #13 0x000055a3684a55b8 in pfs_spawn_thread (arg=0x55a36b4ae8b8) at /test/10.8_opt/storage/perfschema/pfs.cc:2201
      #14 0x000014d0dfd7e609 in start_thread (arg=<optimized out>) at pthread_create.c:477
      #15 0x000014d0df96c293 in clone () at ../sysdeps/unix/sysv/linux/x86_64/clone.S:95
      

      10.8.1 0c5d1342ae6b5ab3256848be7a83e5c3b1f21566 (Debug)

      Core was generated by `/test/MD290122-mariadb-10.8.1-linux-x86_64-dbg/bin/mysqld --no-defaults --core-'.
      Program terminated with signal SIGSEGV, Segmentation fault.
      #0  0x000014c1b12a063b in spider_parse_connect_info (share=0x14c16405dd28, 
          table_share=table_share@entry=0x14c1b13e7ec0, 
          part_info=part_info@entry=0x14c164014a10, 
          create_table=create_table@entry=0)
          at /test/10.8_dbg/storage/spider/spd_table.cc:2396
      [Current thread is 1 (Thread 0x14c1b13ea700 (LWP 3606959))]
      (gdb) bt
      #0  0x000014c1b12a063b in spider_parse_connect_info (share=0x14c16405dd28, table_share=table_share@entry=0x14c1b13e7ec0, part_info=part_info@entry=0x14c164014a10, create_table=create_table@entry=0) at /test/10.8_dbg/storage/spider/spd_table.cc:2396
      #1  0x000014c1b12ab5e7 in spider_create_share (table_name=<optimized out>, table_name@entry=0x14c1b13e7880 "./test/t#P#p", table_share=table_share@entry=0x14c1b13e7ec0, part_info=part_info@entry=0x14c164014a10, hash_value=hash_value@entry=1942185790, error_num=error_num@entry=0x14c1b13e77d0) at /test/10.8_dbg/storage/spider/spd_table.cc:4566
      #2  0x000014c1b12b11bc in spider_discover_table_structure (hton=0x14c164033828, thd=0x14c164000db8, share=0x14c1b13e7ec0, info=0x14c1b13e8bc0) at /test/10.8_dbg/storage/spider/spd_table.cc:9190
      #3  0x000055d7b830f6e9 in create_table_impl (thd=thd@entry=0x14c164000db8, ddl_log_state_create=ddl_log_state_create@entry=0x14c1b13e8920, ddl_log_state_rm=<optimized out>, ddl_log_state_rm@entry=0x14c1b13e8940, orig_db=@0x14c164013fc0: {str = 0x14c164014688 "test", length = 4}, orig_table_name=@0x14c164013fd0: {str = 0x14c164013f70 "t", length = 1}, db=@0x14c164013fc0: {str = 0x14c164014688 "test", length = 4}, table_name=@0x14c164013fd0: {str = 0x14c164013f70 "t", length = 1}, path=@0x14c1b13e8670: {str = 0x14c1b13e8690 "./test/t", length = 8}, options=<optimized out>, create_info=0x14c1b13e8bc0, alter_info=0x14c1b13e8ad0, create_table_mode=-3, is_trans=0x14c1b13e891f, key_info=0x14c1b13e8668, key_count=0x14c1b13e8664, frm=0x14c1b13e8680) at /test/10.8_dbg/sql/sql_table.cc:4561
      #4  0x000055d7b830ff16 in mysql_create_table_no_lock (thd=thd@entry=0x14c164000db8, ddl_log_state_create=ddl_log_state_create@entry=0x14c1b13e8920, ddl_log_state_rm=ddl_log_state_rm@entry=0x14c1b13e8940, db=db@entry=0x14c164013fc0, table_name=table_name@entry=0x14c164013fd0, create_info=create_info@entry=0x14c1b13e8bc0, alter_info=0x14c1b13e8ad0, is_trans=0x14c1b13e891f, create_table_mode=-3, table_list=0x14c164013fa8) at /test/10.8_dbg/sql/sql_table.cc:4710
      #5  0x000055d7b8310339 in mysql_create_table (thd=thd@entry=0x14c164000db8, create_table=create_table@entry=0x14c164013fa8, create_info=create_info@entry=0x14c1b13e8bc0, alter_info=alter_info@entry=0x14c1b13e8ad0) at /test/10.8_dbg/sql/sql_table.cc:4822
      #6  0x000055d7b83121e3 in Sql_cmd_create_table_like::execute (this=<optimized out>, thd=0x14c164000db8) at /test/10.8_dbg/sql/sql_table.cc:12297
      #7  0x000055d7b822a2b0 in mysql_execute_command (thd=thd@entry=0x14c164000db8, is_called_from_prepared_stmt=is_called_from_prepared_stmt@entry=false) at /test/10.8_dbg/sql/sql_parse.cc:5988
      #8  0x000055d7b8210db7 in mysql_parse (thd=thd@entry=0x14c164000db8, rawbuf=<optimized out>, length=<optimized out>, parser_state=parser_state@entry=0x14c1b13e9400) at /test/10.8_dbg/sql/sql_parse.cc:8027
      #9  0x000055d7b821fa53 in dispatch_command (command=command@entry=COM_QUERY, thd=thd@entry=0x14c164000db8, packet=packet@entry=0x14c16400b889 "CREATE TABLE t ENGINE=SPIDER COMMENT=\"TABLE 't2'\" PARTITION BY LIST COLUMNS (c) (PARTITION p DEFAULT COMMENT=\"srv 'a'\" ENGINE=SPIDER)", packet_length=packet_length@entry=133, blocking=blocking@entry=true) at /test/10.8_dbg/sql/sql_class.h:1362
      #10 0x000055d7b8222e9a in do_command (thd=0x14c164000db8, blocking=blocking@entry=true) at /test/10.8_dbg/sql/sql_parse.cc:1402
      #11 0x000055d7b839e110 in do_handle_one_connection (connect=<optimized out>, connect@entry=0x55d7bb415748, put_in_cache=put_in_cache@entry=true) at /test/10.8_dbg/sql/sql_connect.cc:1418
      #12 0x000055d7b839e715 in handle_one_connection (arg=arg@entry=0x55d7bb415748) at /test/10.8_dbg/sql/sql_connect.cc:1312
      #13 0x000055d7b8827c8e in pfs_spawn_thread (arg=0x55d7bb329638) at /test/10.8_dbg/storage/perfschema/pfs.cc:2201
      #14 0x000014c1d1579609 in start_thread (arg=<optimized out>) at pthread_create.c:477
      #15 0x000014c1d1167293 in clone () at ../sysdeps/unix/sysv/linux/x86_64/clone.S:95
      

      Bug confirmed present in:
      MariaDB: 10.8.1 (dbg), 10.8.1 (opt), 10.9.0 (dbg), 10.9.0 (opt)

      Bug (or feature/syntax) confirmed not present in:
      MariaDB: 10.2.42 (dbg), 10.2.42 (opt), 10.3.33 (dbg), 10.3.33 (opt), 10.4.23 (dbg), 10.4.23 (opt), 10.5.14 (dbg), 10.5.14 (opt), 10.6.6 (dbg), 10.6.6 (opt), 10.7.2 (dbg), 10.7.2 (opt) MySQL: 5.5.62 (dbg), 5.5.62 (opt), 5.6.51 (dbg), 5.6.51 (opt), 5.7.36 (dbg), 5.7.36 (opt), 8.0.27 (dbg), 8.0.27 (opt)

      Attachments

        Issue Links

          Activity

            People

              nayuta-yanagisawa Nayuta Yanagisawa (Inactive)
              Roel Roel Van de Paar
              Votes:
              1 Vote for this issue
              Watchers:
              5 Start watching this issue

              Dates

                Created:
                Updated:
                Resolved:

                Time Tracking

                  Estimated:
                  Original Estimate - Not Specified
                  Not Specified
                  Remaining:
                  Remaining Estimate - 0d
                  0d
                  Logged:
                  Time Spent - 3h 25m
                  3h 25m

                  Git Integration

                    Error rendering 'com.xiplink.jira.git.jira_git_plugin:git-issue-webpanel'. Please contact your Jira administrators.