MDEV-27860 SIGSEGV in spider_parse_connect_info on CREATE TABLE

Check if option_struct is NULL in spider_parse_connect_info().